--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,3 +1,7 @@
 <link rel="stylesheet" href="/css/user_profile.css">
 
-<h1>Hello from users <%= title%> </h1>
+<h1>Welcome <%= name %> to Codial. </h1>
+<h2><%= email %> </h2>
+
+
+<a href="/users/sign-out">Sign Out</a>
