--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,6 +1,6 @@
 <h1>Sign In</h1>
 
-<form method="post" action="users/create-session">
+<form method="post" action="/users/create-session">
     <input type="email" name="email" id="" required placeholder="email">
     <input type="password" name="password" id="" required placeholder="password">
     <button type="submit">Sign In</button>
