--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,1 +1,23 @@
-<header>This is the header</header>
+<header>
+    <span>This is the header</span>
+    <ul>
+        <% if (locals.user) { %>
+            <li>
+                <a href="/users/profile">
+                    <%= user.name %>
+                </a>
+            </li>
+            <li>
+                <a href="/users/sign-out">Sign Out</a>
+            </li>
+            <% } else { %>
+                <li>
+                    <a href="/users/sign-in">Sign In</a>
+                    <a href="/users/sign-up">Sign Up</a>
+                </li>
+                <% } %>
+
+
+    </ul>
+
+</header>
