--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,3 +1,5 @@
 <link rel="stylesheet" href="/css/user_profile.css">
 
-<h1>Hello from users <%= title%> </h1>
+<h1>Hello from users <%= locals.user.name %></h1>
+<h2><%= locals.user.email %></h2>
+
