--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,9 +1,12 @@
 /* layout contains common style common accross all the web pages */
-*{
-    box-sizing: border-box;
-}
+* {
+  box-sizing: border-box; }
 
-body{
-    margin: 0;
-    background-color: aquamarine;
-}
+body {
+  margin: 0;
+  background-color: aquamarine;
+  height: 100vh;
+  padding: 0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+  body #layout-main {
+    height: 100%; }
