--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,6 +1,8 @@
 <header>
-    <span>This is the header</span>
-    <ul>
+    <h1>
+    <a href="/">Codial</a>
+    </h1>
+    <ul id="header-items-cont">
         <% if (locals.user) { %>
             <li>
                 <a href="/users/profile">
@@ -13,6 +15,8 @@
             <% } else { %>
                 <li>
                     <a href="/users/sign-in">Sign In</a>
+                </li>
+                <li>
                     <a href="/users/sign-up">Sign Up</a>
                 </li>
                 <% } %>
