--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,22 +8,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
     <%- style %>
-    <title>
-        <%= title %>
-    </title>
+        <title>
+            <%= title %>
+        </title>
 </head>
 
 <body>
 
     <%- include('_header'); -%>
 
-        <%-body%>
+        <main id="layout-main">
+            <%-body%>
+        </main>
 
-    <%- include('_footer'); -%>
+        <%- include('_footer'); -%>
 
 
-    <%- script %>
+        <%- script %>
 
 </body>
 
