--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -5,8 +5,8 @@
 body {
   margin: 0;
   background-color: aquamarine;
-  height: 100vh;
+  min-height: 100vh;
   padding: 0;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
   body #layout-main {
-    height: 100%; }
+    min-height: 100vh; }
