--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -6,11 +6,11 @@
 body {
     margin: 0;
     background-color: aquamarine;
-    height: 100vh;
+    min-height: 100vh;
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
     #layout-main {
-        height: 100%;
+        min-height: 100vh;
     }
 }
