add comment delete functionality with authorization for the user who made the comment and the post owner

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,9 +21,9 @@
                             <%= post.content %>
                                 &nbsp;
                                 <!-- only show the delete button to the user who is signed and only to whom has made that post -->
-                                <% if (locals.user && locals.user.id == post.user.id) { %>
+                                <% if (locals.user && locals.user.id==post.user.id) { %>
                                     <a href="/posts/destroy/<%= post.id %> ">Delete post</a>
-                                <% } %>
+                                    <% } %>
 
                         </p>
 
@@ -43,8 +43,11 @@
                                     <li>
                                         <p>
                                             <%= comment.content %>
-                                            &nbsp;
-                                            <a href="/comment/destroy/<%= comment.id %> ">Delete comment</a>
+                                                &nbsp;
+                                                <!-- show the delete comment button only to the user who made the comment and signed in -->
+                                                <% if (locals.user && (comment.user.id == locals.user.id || locals.user.id == post.user.id)) { %>
+                                                    <a href="/comments/destroy?commentID=<%= comment.id %>&postUserID=<%= post.user.id %> ">Delete comment</a>
+                                                    <% } %>
                                         </p>
                                         <small>
                                             : - Made by - <%= comment.user.name %>
@@ -59,7 +62,7 @@
                         <div class="post-comments">
                             <% if (locals.user) { %>
                                 <h3>Add a comment</h3>
-                                <form action="/comment/create" method="post">
+                                <form action="/comments/create" method="post">
                                     <input type="text" name="content" required
                                         placeholder="Type here to add comment...">
                                     <input type="hidden" name="post" value=<%=post.id %> >
