--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -9,7 +9,7 @@
 
         <% if (locals.user) { %>
             <li>
-                <a href="/users/profile">
+                <a href="/users/profile/<%= locals.user.id %> ">
                     Profile
                 </a>
             </li>
