--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -5,7 +5,7 @@
     <ul id="header-items-cont">
         <% if (locals.user) { %>
             <li>
-                <a href="/users/profile">
+                <a href="/users/profile/<%= locals.user.id %> ">
                     <%= user.name %>
                 </a>
             </li>
