--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,3 +26,14 @@
                     <% } %>
             </ul>
         </section>
+
+        <section id="user-friends">
+            <h4>Friends</h4>
+            <% for( let u of locals.all_users ) { %>
+                <p>
+                    <a href="/users/profile/<%= u.id %> ">
+                        <%= u.name %>
+                    </a>
+                </p>
+            <% } %>
+        </section>
