--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,5 +1,20 @@
 <link rel="stylesheet" href="/css/user_profile.css">
 
-<h1>Hello from users <%= locals.user.name %></h1>
-<h2><%= locals.user.email %></h2>
+<h1>Hello from users <%= locals.profile_user.name %>
+</h1>
+<h2>
+    <%= locals.profile_user.email %>
+</h2>
 
+<!-- display the change profile details form only if the signed in user is viewing their own profile page -->
+<% if (locals.user.id==locals.profile_user.id) { %>
+    <h4>Change profile details</h4>
+    <form method="post" action="/users/update/<%= locals.profile_user.id %> ">
+        <input type="text" name="name" placeholder="Your Name" value="<%= locals.profile_user.name %> " required>
+        <input type="email" name="email" id="" placeholder="Your Email" value="<%= locals.profile_user.email %> " required>
+        <button type="submit">Update Details</button>
+    </form>
+    <% } else { %>
+        <!-- else only show the profile info -->
+
+    <% } %>
