--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,9 +1,9 @@
 <h1>Sign Up</h1>
 
 <form method="post" action="/users/create">
-    <input type="text" name="name" placeholder="name">
-    <input type="email" name="email" id="" placeholder="email">
-    <input type="password" name="password" id="" placeholder="password">
-    <input type="password" name="confirm_password" id="" placeholder="confirm password">
+    <input type="text" name="name" placeholder="name" required>
+    <input type="email" name="email" id="" placeholder="email" required>
+    <input type="password" name="password" id="" placeholder="password" required>
+    <input type="password" name="confirm_password" id="" placeholder="confirm password" required>
     <button type="submit">Sign Up</button>
 </form>
