--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -4,9 +4,10 @@
 
 body {
   margin: 0;
-  background-color: aquamarine;
   min-height: 100vh;
   padding: 0;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
   body #layout-main {
-    min-height: 100vh; }
+    min-height: 100vh;
+    background-color: cadetblue;
+    margin: 0; }
