--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -2,15 +2,18 @@
 * {
     box-sizing: border-box;
 }
+// html, body {margin:0;padding:0;height:100%;}
 
 body {
     margin: 0;
-    background-color: aquamarine;
     min-height: 100vh;
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
     #layout-main {
         min-height: 100vh;
+        background-color: cadetblue;
+        margin: 0;
+        // position:absolute;
     }
 }
