--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,11 @@
 <link rel="stylesheet" href="/css/home.css">
+
+
+
 <% if (locals.user) { %>
     <section id="post-section">
         <h1>Posts</h1>
-        <form action="/posts/create" method="post">
+        <form action="/posts/create" method="post" id="new-post-form">
             <textarea name="content" cols="30" rows="3" placeholder="Type Here..." required></textarea>
             <button type="submit">Post</button>
         </form>
@@ -18,9 +21,7 @@
 
                         <!-- separate partial for showing post -->
                          <!-- passing post as a prop to the _post partial  -->
-                        <%- include("_post", { post }) %>
-
-                            <hr>
+                        <%- include("_post", { post }) %>                            
                             <% } %>
                 </ul>
             </section>
@@ -36,3 +37,4 @@
                     <% } %>
             </section>
         </div>
+        <script src="/js/home_posts.js"></script>
