--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -1,11 +1,11 @@
 <!-- partial to show comments -->
-<li>
+<li id="comment-<%= comment.id %>">
     <p>
         <%= comment.content %>
             &nbsp;
             <!-- show the delete comment button only to the user who made the comment and signed in -->
             <% if (locals.user && (comment.user.id==locals.user.id || locals.user.id==post.user.id)) { %>
-                <a href="/comments/destroy?commentID=<%= comment.id %>&postUserID=<%= post.user.id %> ">Delete
+                <a class="delete-comment-button" href="/comments/destroy?commentID=<%= comment.id %>&postUserID=<%= post.user.id %> ">Delete
                     comment</a>
                 <% } %>
     </p>
