--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -40,7 +40,7 @@
             <form action="/comments/create" method="post">
                 <input type="text" name="content" required placeholder="Type here to add comment...">
                 <input type="hidden" name="post" value=<%=post.id %> >
-                <button type="submit">Add comment</button>
+                <button type="submit" class="submit-comment">Add comment</button>
             </form>
             <% } %>
 
