add social authentication to the app with passport-google-oauth2 strategy and set up it's configuration

--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -5,3 +5,8 @@
     <input type="password" name="password" id="" required placeholder="password">
     <button type="submit">Sign In</button>
 </form>
+
+
+<p>
+    <a href="/users/auth/google">Sign In/ Sign Up</a>
+</p>
