add styles and bootstrap to the front end

--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -1,5 +1,5 @@
 <!-- partial to show comments -->
-<li id="comment-<%= comment.id %>">
+<li id="comment-<%= comment.id %>" class="list-group-item">
     <p>
         <%= comment.content %>
             &nbsp;
@@ -13,3 +13,4 @@
         : - Made by - <%= comment.user.name %>
     </small>
 </li>
+
