--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,50 +1,79 @@
 <!-- partial to show posts -->
 
-<li id="post-<%= post.id %>">
-    <p>
-        <%= post.content %>
-            &nbsp;
-            <!-- only show the delete button to the user who is signed and only to whom has made that post -->
-            <% if (locals.user && locals.user.id==post.user.id) { %>
-                <a  class="delete-post-button" href="/posts/destroy/<%= post.id %> ">Delete post</a>
-                <% } %>
-
-                
-
-    </p>
-
-    <small>
-        <span>--- <%= post.user.name %></span>
-    </small>
+<!-- <small>And some small print.</small> -->
 
 
 
 
-    <div class="post-comments-list">
-        <h3>Comments for this post</h3>
+<li class="list-group-item bg-success p-2 m-1" id="post-<%= post.id %>">
 
-        <ul id="post-comments-<%= post.id %>">
+  <div class="">
+    <div class="card mb-1">
+      <h5 class="card-header">Featured</h5>
+      <div class="card-body">
+        <!-- <h5 class="card-title">Special title treatment</h5> -->
+        <div class="card-text d-flex justify-content-between align-items-center">
+          <p class="m-1">
+            <%= post.content %>
+          </p>
+          <small>
+            <span>--<%= post.user.name %></span>
+          </small>
+        </div>
 
-            <% for( let comment of post.comments ) { %>
-                <!-- passing comment as a prop to the _comment partial -->
-                <%- include("_comment", { comment }) %>
-                    <% } %>
 
-        </ul>
+        <!-- only show the delete button to the user who is signed and only to whom has made that post -->
+        <% if (locals.user && locals.user.id==post.user.id) { %>
+        <a class="btn btn-primary delete-post-button m-1" href="/posts/destroy/<%= post.id %>">Delete post</a>
+        <% } %>
+      </div>
+    </div>
+  </div>
+
+
+
+
+  <div class="post-comments-list mb-1">
+
+    <div class="accordion" id="accordion-<%=post.id%>">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-<%=post.id%>" aria-expanded="true" aria-controls="collapse-<%=post.id%>">
+            Comments for this post
+          </button>
+        </h2>
+        <div id="collapse-<%=post.id%>" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordion-<%=post.id%>">
+          <div class="accordion-body">
+
+            <ul id="post-comments-<%= post.id %>" class="list-group">
+
+              <% for( let comment of post.comments ) { %>
+              <!-- passing comment as a prop to the _comment partial -->
+              <%- include("_comment", { comment }) %>
+              <% } %>
+
+            </ul>
+          </div>
+        </div>
+      </div>
+
     </div>
 
 
-    <div class="post-comments">
-        <% if (locals.user) { %>
-            <h3>Add a comment</h3>
-            <form action="/comments/create" method="post">
-                <input type="text" name="content" required placeholder="Type here to add comment...">
-                <input type="hidden" name="post" value=<%=post.id %> >
-                <button type="submit" class="submit-comment">Add comment</button>
-            </form>
-            <% } %>
+  </div>
 
-    </div>
 
-    <hr>
+  <div class="post-comments">
+    <% if (locals.user) { %>
+    <h3>Add a comment</h3>
+    <form action="/comments/create" method="post">
+      <input type="text" name="content" required placeholder="Type here to add comment...">
+      <input type="hidden" name="post" value=<%=post.id %>>
+      <button type="submit" class="submit-comment">Add comment</button>
+    </form>
+    <% } %>
+
+  </div>
+
+  <hr>
 </li>
